add map assert additional methods